[workspace]
resolver = "2" # Resolver version (keep it 2)
members = [
    #################################
    ###        Main crates        ###
    #################################
    # Python interface implementation
    "arc",
    # ARC client (used to control the robot)
    "client",
    # Code uploader (used to upload code to the robot)
    "uploader",
    # Robot HTTP server, used to control the robot via HTTP
    "server",
    # Robot runtime (used to run the robot code)
    "robot",

    #################################
    ###       Helper crates       ###
    #################################
    # Low level math functions
    "helpers/l2math",
    # Trigonometric abstractions
    "helpers/libtrig",
    # Macros used to simplify code
    "helpers/macros",
]

[workspace.package]
# Contributors of team Draniki may add their name bellow
authors = [
    "Матвей Т <https://matveit.dev> AtomicGamer9523@github"
]
# Github Repository
repository = "https://github.com/DranikiRobotics/arc"
# Rust edition (keep it 2021)
edition = "2021"
# License of the entire workspace
license = "MIT"

# Version of the entire workspace
version = "0.0.1-dev"

[profile.release]
# Optimization level (keep it 3)
opt-level = 3

# Emit debug symbols
debug = true
# debug = false

# What to do when a panic occurs
panic = "unwind"
# panic = "abort"
