[workspace]
resolver = "2" # Resolver version (keep it 2)
members = [
    # Python interface implementation
    "arc",
    # ARC client (used to control the robot)
    "client",
    # The robot code (hardware abstractions, python runtime, http server)
    "robot",
]

[workspace.package]
# Contributors of team Draniki may add their name bellow
authors = [
    "Матвей Т <https://matveit.dev> AtomicGamer9523@github"
]
# Github Repository
repository = "https://github.com/DranikiRobotics/arc"
# Rust edition (keep it 2021)
edition = "2021"
# License of the entire workspace
license = "BSD-2-Clause"

# Version of the entire workspace
version = "0.0.1-dev"
