[package]
name = "arc-pylib"
description = "ARC python interface"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies.dranikcore]
package = "dranik-core"
path = "../robot/core"

[dependencies.libtrig]
git = "https://github.com/DranikiRobotics/librobomath"
package = "libtrig"

[dependencies.pyo3]
#!!! Important - DO NOT ENABLE extension-module FEATURE HERE!!!
version = "0.20.0"
features = [
    "abi3-py311" # for python 3.11
]

[features]
# instead extension-module feature for pyo3 is enabled conditionally
# when we want to build a standalone extension module to test our plugins without "main" program
extension-module = ["pyo3/extension-module"]
