[package]
name = "arc-pylib"
description = "ARC python interface"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies.dranikcore]
package = "dranik-core"
path = "../robot/core"
features = [
    "reveal_modules", # More items
    "internals", # Internal modules
]

[dependencies.libtrig]
git = "https://github.com/DranikiRobotics/librobomath"
package = "libtrig"
optional = true

[dependencies.pyo3]
version = "0.20"
features = [
    "extension-module", # for standalone extension module
    "abi3-py311" # for python 3.11
]

[features]
dranik-only-builtins = ["dranikcore/only_builtins"]
math = ["dep:libtrig"]
