[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "arc"
version = "0.0.1-dev"
description = "Advanced Robot Controller"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
