[package]
name = "dranik"
description = "Dranik Robot"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "dranik"
path = "lib.rs"

[[bin]]
name = "dranik"
path = "../dranik.rs"

[dependencies]
# Core of the robot (hardware abstraction layer)
dranik-core = { path = "./core" }
# Robot HTTP client, used to control the robot via HTTP
dranik-web = { path = "./web" }
# Python runtime for the robot
dranik-python = { path = "./python" }
# Async runtime
tokio = { version = "1.35", features = ["rt", "signal"] }

[dependencies.arc]
path = "../arc"
package = "arc-pylib"
features = [
    "dranik-only-builtins",
    "math"
]

[features]
default = ["only-builtins"]

only-builtins = [
    "dranik-core/only_builtins",
    "dranik-python/dranik-only-builtins",
]
