[package]
name = "arc-robot-server"
description = "ARC Robot Server"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "comptime.rs"

[lib]
name = "arc_rs"
path = "lib.rs"

[[bin]]
name = "arc-robot-server"
path = "main.rs"

[dependencies.robot]
package = "arc-robot"
path = "../robot"

# [dependencies.pyruntime]
# package = "arc-robot-python-runtime"
# path = "./runtime"

# [dependencies.pylib]
# package = "arc-pylib"
# path = "../../arc"
# 
# [dependencies.pyo3]
# version = "0.20.0"
# features = ["extension-module"]

[dependencies.rocket]
version = "0.5"
features = []

[dependencies.log]
version = "0.4"
