[package]
name = "libtrig"
description = "Trigonometry functionality"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies.macros]
path = "../macros"

[dependencies.l2math]
path = "../l2math"

[features]
unstable = ["l2math/unstable"]
