[package]
name = "macros"
description = "A collection of macros used throughout the project"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true
path = "lib.rs"

[dependencies.mc]
package = "macros-core"
path = "./macros-core"
