[package]
name = "libodo"
description = "Core odometrix functionality, you probably shouldn't use this directly"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies.libtrig]
path = "../libtrig"

[dependencies.l2math]
path = "../l2math"

[lib]
path = "lib.rs"
