[package]
name = "libpath"
description = "Pathing"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies.libtrig]
path = "../libtrig"

[dependencies.libodo]
path = "../libodo"

[dependencies.l2math]
path = "../l2math"

[lib]
path = "lib.rs"
