[package]
name = "libtrig"
description = "Trigonometry functionality"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies.macros]
package = "macros"
path = "../macros"

[dependencies.llm]
package = "llm"
path = "../llm"

[lib]
path = "lib.rs"
