[package]
name = "arc-robot"
description = "ARC Robot server"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "arcrobot"
path = "bin/main.rs"

[dependencies.hardware]
package = "arc-robot-hardware"
path = "./hardware"
