[package]
name = "arc-robot"
description = "ARC Robot server"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "arc-robot"
path = "main.rs"

[dependencies.hardware]
package = "arc-robot-hardware"
path = "./hardware"

[dependencies.pylib]
package = "arc-pylib"
path = "../../arc"

[dependencies.pyo3]
version = "0.20.0"
features = ["extension-module"]

# [dependencies.rustpython_vm]
# git = "https://github.com/RustPython/RustPython"
# rev = "0fab6e606379cfda346c82fa2f3960d0449b40e9"
# package = "rustpython-vm"
