[package]
name = "arc-robot-core"
description = "ARC Robot Core"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies.l2math]
path = "../../helpers/l2math"

[dependencies.libtrig]
path = "../../helpers/libtrig"

[features]
unstable = ["l2math/unstable", "libtrig/unstable"]
