[package]
name = "dranik-core"
description = "Dranik Robot Core"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "dranikcore"
path = "lib.rs"

[dependencies.l2math]
git = "https://github.com/DranikiRobotics/librobomath"
package = "l2math"

[dependencies.libtrig]
git = "https://github.com/DranikiRobotics/librobomath"
package = "libtrig"

[dependencies.tokio]
version = "1.35"

[dependencies.pyo3]
version = "0.20.0"

[[test]]
name = "rust_only_robot"
path = "tests/rust_only_robot.rs"

[features]
unstable = ["l2math/unstable", "libtrig/unstable"]

only_builtins = []
allow_external_impls = []

reveal_modules = []
internals = []
