[package]
name = "arc-robot-hardware"
description = "ARC Robot hardware"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies.l2math]
path = "../../helpers/l2math"

[dependencies.libtrig]
path = "../../helpers/libtrig"
