[package]
name = "arc-robot-python-runtime"
description = "ARC Robot Server Python Runtime"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "arc_robot_server_python_runtime"
path = "lib.rs"

[dependencies.arc_core]
package = "arc-robot-core"
path = "../core"

[dependencies.pylib]
package = "arc-pylib"
path = "../../arc"

[dependencies.pyo3]
version = "0.20.0"
features = ["extension-module"]
