[package]
name = "libtrig"
description = "Trigonometry functionality"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies.macros]
path = "../macros"

[dependencies.l2math]
path = "../l2math"

[lib]
path = "lib.rs"
