[package]
name = "l2math-bindings"
description = "Low Level Math Bindings"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "lib.rs"
crate-type = ["cdylib", "staticlib"]

[features]
no_std = []

[dependencies.l2math]
path = ".."
